增加了响应样式

--- a/jiaoxiaojie/1-5响应.html
+++ b/jiaoxiaojie/1-5响应.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta charset="utf-8">
         <title></title>
-        <link rel="stylesheet" type="text/css" href="1-1.css" />
+        <link rel="stylesheet" type="text/css" href="1-5响应.css" />
     </head>
     <body>
-        <nav>
+        <nav class="col-m-10 na">
             <ul>
                 <li><a href="">首页</a></li>
                 <li><a href="">文章</a></li>
@@ -14,7 +15,7 @@
             </ul>
         </nav>
 
-        <div class="start">
+        <div class="col-m-10 start">
             <div class="sta1">
                 <p>您好，欢迎光临我的Blog</p>
                 <span>2019-2-12</span>
@@ -23,7 +24,7 @@
         </div>
 
 
-        <div class="infor">
+        <div class="col-m-10 infor">
             <h5>个人信息</h5>
             <div class="infor1">
                 <div class="in1"></div>
@@ -62,7 +63,7 @@
             <div><a class="a1" href="http://www.baidu.com">更多......</a></div>
         </div>
         <div class="tool">
-            <div class="infor">
+            <div class="col-m-10 infor">
                 <h5>开发工具</h5>
                 <div class="infor1">
                     <div class="in1" style="background-color: #007BFF;"></div>
@@ -103,3 +104,4 @@
         </div>
     </body>
 </html>
+
