--- a/jiaoxiaojie/WinterZone/listings.html
+++ b/jiaoxiaojie/WinterZone/listings.html
@@ -344,7 +344,7 @@
               <p>Copyright 2018 by ModelTheme. All Rights Reserved.</p>
           </div>
           
-          <script src="dist/js/swiper.min.js"></script>
+          <script src="../../../static/dist/js/swiper.min.js"></script>
           <script>
           	var mySwiper = new Swiper ('.lan2 .swiper-container', {
                 observer:true,//修改swiper自己或子元素时，自动初始化swiper
