--- a/jiaoxiaojie/WinterZone/index.html
+++ b/jiaoxiaojie/WinterZone/index.html
@@ -58,7 +58,7 @@
         <nav class="navbar navbar-expand-md" style="background-color: #5C9CEB;">
             <div class="container">
                 <div class="row"> 
-       <div class="col-sm-2 logo "><img src="images/logowinterzone.png" class="img-fluid"></div>
+       <div class="col-sm-2 logo "><img src="images/logowinterzone.png" class="img-fluid" ></div>
        
        
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -295,7 +295,7 @@ cillum dolore eu fugiat nulla pariatur.</p>
                    </div> 
             <div class="row" style="margin-right: 0px;">
            <div class="col-sm-3 num">
-               <p id="tm" class="shu">820</p>
+               <p id="tm0" class="shu">820</p>
                <span>————</span>
                <p class="zi">Equipments</p>
            </div>
